package devops;

public  class lieu {
    private  String nom;

    public lieu()
    {
        this.nom="";
    }
    
    public lieu(String nom){
        this.nom=nom;
    }

    public String getNom(){
        return this.nom;
    }
}
